--- a/contact.html
+++ b/contact.html
@@ -228,6 +228,45 @@
     });
   })();
 
+
+  
+</script>
+
+
+
+  <!-- Hero -->
+  <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Kontaktiere uns</h2>
+    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
+      Wir freuen uns auf deine Anfrage – schreib uns oder besuche uns direkt!
+    </p>
+  </section>
+
+  <!-- Kontakt + Map -->
+  <section class="grid grid-cols-1 md:grid-cols-2 gap-8 p-12">
+    <!-- E-Mail Button -->
+    <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 flex flex-col justify-center items-center">
+      <h3 class="text-2xl font-bold mb-6 text-purple-600">Schreib uns direkt</h3>
+      <a href="mailto:aountewstech@gmail.com" 
+         class="bg-purple-600 text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-purple-700 transition">
+        📩 E-Mail an uns senden
+      </a>
+    </div>
+
+    <!-- Google Maps -->
+    <div data-aos="fade-left" class="rounded-2xl overflow-hidden shadow-xl">
+     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d152.69889176761245!2d10.483227019233805!3d52.240072926503274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1755784924670!5m2!1sde!2sde"
+        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">     
+       </iframe>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
+    <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
+  </footer>
+
+<script>
     // AOS Init
     AOS.init({ duration: 1000, once: true });
 
@@ -270,41 +309,5 @@ toggle.addEventListener('click', () => {
 });
   
 </script>
-
-
-
-  <!-- Hero -->
-  <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Kontaktiere uns</h2>
-    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
-      Wir freuen uns auf deine Anfrage – schreib uns oder besuche uns direkt!
-    </p>
-  </section>
-
-  <!-- Kontakt + Map -->
-  <section class="grid grid-cols-1 md:grid-cols-2 gap-8 p-12">
-    <!-- E-Mail Button -->
-    <div data-aos="fade-right" class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 flex flex-col justify-center items-center">
-      <h3 class="text-2xl font-bold mb-6 text-purple-600">Schreib uns direkt</h3>
-      <a href="mailto:aountewstech@gmail.com" 
-         class="bg-purple-600 text-white px-6 py-3 rounded-lg text-lg font-semibold hover:bg-purple-700 transition">
-        📩 E-Mail an uns senden
-      </a>
-    </div>
-
-    <!-- Google Maps -->
-    <div data-aos="fade-left" class="rounded-2xl overflow-hidden shadow-xl">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d152.69889176761245!2d10.483227019233805!3d52.240072926503274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sde!4v1755784924670!5m2!1sde!2sde"
-        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">     
-       </iframe>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
-    <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
-  </footer>
-
-
 </body>
 </html>
