--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -393,35 +393,38 @@
     // AOS Init
     AOS.init({ duration: 1000, once: true });
 
-    // Dark Mode Toggle mit Icon & LocalStorage
-    const btn = document.getElementById('darkToggle');
+   // Dark Mode Toggle mit Icon & LocalStorage
+  const btn = document.getElementById("darkToggle");
 
-    function updateIcon() {
-      if (document.documentElement.classList.contains('dark')) {
-        btn.textContent = "☀️";
-      } else {
-        btn.textContent = "🌙";
-      }
+  function updateIcon() {
+    if (!btn) return; // <-- Schutz
+    if (document.documentElement.classList.contains("dark")) {
+      btn.textContent = "☀️";
+    } else {
+      btn.textContent = "🌙";
     }
+  }
 
-    // gespeichertes Theme prüfen
-    if (localStorage.getItem('theme') === 'dark') {
-      document.documentElement.classList.add('dark');
-    }
+  // gespeichertes Theme prüfen
+  if (localStorage.getItem("theme") === "dark") {
+    document.documentElement.classList.add("dark");
+  }
 
-    updateIcon();
+  updateIcon();
 
-    btn.addEventListener('click', () => {
-      document.documentElement.classList.toggle('dark');
+  if (btn) {
+    btn.addEventListener("click", () => {
+      document.documentElement.classList.toggle("dark");
 
-      if (document.documentElement.classList.contains('dark')) {
-        localStorage.setItem('theme', 'dark');
+      if (document.documentElement.classList.contains("dark")) {
+        localStorage.setItem("theme", "dark");
       } else {
-        localStorage.setItem('theme', 'light');
+        localStorage.setItem("theme", "light");
       }
 
       updateIcon();
     });
+  }
 
    // Mobile Menü öffnen/schließen
 const toggle = document.getElementById('menuToggle');
