--- a/contact.html
+++ b/contact.html
@@ -274,35 +274,48 @@
     // AOS Init
     AOS.init({ duration: 1000, once: true });
 
-    // Dark Mode Toggle mit Icon & LocalStorage
-    const btn = document.getElementById('darkToggle');
 
-    function updateIcon() {
-      if (document.documentElement.classList.contains('dark')) {
-        btn.textContent = "☀️";
-      } else {
-        btn.textContent = "🌙";
-      }
+  document.addEventListener("DOMContentLoaded", () => {
+    // Beide Buttons holen (Desktop & Mobile)
+    const btns = [
+      document.getElementById("darkToggle"),
+      document.getElementById("darkToggleMobile")
+    ];
+
+    // Funktion Icon setzen
+    function updateIcons() {
+      btns.forEach(btn => {
+        if (btn) {
+          btn.textContent = document.documentElement.classList.contains("dark")
+            ? "☀️"
+            : "🌙";
+        }
+      });
     }
 
-    // gespeichertes Theme prüfen
-    if (localStorage.getItem('theme') === 'dark') {
-      document.documentElement.classList.add('dark');
+    // Prüfen ob Darkmode gespeichert ist
+    if (localStorage.getItem("theme") === "dark") {
+      document.documentElement.classList.add("dark");
     }
 
-    updateIcon();
+    // Icons beim Laden updaten
+    updateIcons();
 
-    btn.addEventListener('click', () => {
-      document.documentElement.classList.toggle('dark');
-
-      if (document.documentElement.classList.contains('dark')) {
-        localStorage.setItem('theme', 'dark');
-      } else {
-        localStorage.setItem('theme', 'light');
-      }
-
-      updateIcon();
+    // Click-Event für beide Buttons
+    btns.forEach(btn => {
+      if (!btn) return;
+      btn.addEventListener("click", () => {
+        document.documentElement.classList.toggle("dark");
+        localStorage.setItem(
+          "theme",
+          document.documentElement.classList.contains("dark") ? "dark" : "light"
+        );
+        updateIcons();
+      });
     });
+  });
+
+
 
    // Mobile Menü öffnen/schließen
 const toggle = document.getElementById('menuToggle');
