--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -88,7 +88,7 @@
     <!-- Dark Mode Button (mobil) -->
     <button id="darkToggleMobile" class="text-xl">🌙</button>
   
- <button id="menuToggle" class="md:hidden flex flex-col gap-1 p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-700">
+ <button id="menuToggle" class="hidden flex-col gap-6 font-bold text-lg p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50 w-64">
     <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
     <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
     <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
