--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 
 
  <!-- Mobile login-->
-<ul id="mobileMenu" class="hidden flex-col gap-4 font-medium p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50">
+<ul id="mobileMenu" class="hidden flex-col gap-6 font-bold text-lg p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50 w-64">
   <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
   <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
   <li><a href="builds.html" class="hover:text-purple-500 transition">PC-Builds</a></li>
