--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -84,15 +84,17 @@
   <p id="status-desktop" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
 </div>
 
-   <div class="flex items-center gap-3 md:hidden">
-    <!-- Dark Mode Button (mobil) -->
-    <button id="darkToggleMobile" class="text-xl">🌙</button>
-  
- <button id="menuToggle" class="hidden flex-col gap-6 font-bold text-lg p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50 w-64">
+  <div class="flex items-center gap-3 md:hidden">
+  <!-- Dark Mode Button (mobil) -->
+  <button id="darkToggleMobile" class="text-xl">🌙</button>
+
+  <!-- Hamburger Button -->
+  <button id="menuToggle" class="flex flex-col justify-center items-center w-8 h-8 gap-1">
     <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
     <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
     <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
   </button>
+</div>
 
 
   
