--- a/builds.html
+++ b/builds.html
@@ -258,7 +258,7 @@
   </a>
 
   <!-- Workstation -->
-  <a href="workstations.html" 
+  <a href="workstation-pcs.html" 
      data-aos="fade-up" data-aos-delay="200"
      class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 block">
     <div class="w-full h-48 bg-gray-200 dark:bg-gray-700 flex items-center justify-center overflow-hidden rounded-lg mb-4">
