--- a/budget-pcs.html
+++ b/budget-pcs.html
@@ -239,8 +239,8 @@
   
 <!-- Hero -->
 <section class="text-center py-20 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-  <h1 class="text-4xl font-extrabold mb-4">Gaming PCs</h1>
-  <p class="text-lg opacity-90">Unsere beliebtesten vorkonfigurierten Gaming-Systeme</p>
+  <h1 class="text-4xl font-extrabold mb-4">Budget Pcs</h1>
+  <p class="text-lg opacity-90">Unsere beliebtesten vorkonfigurierten Budget-Systeme</p>
 </section>
 
 <!-- Produktliste -->
@@ -250,7 +250,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 1</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 1</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 1</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -266,7 +266,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 2</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 2</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 2</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -282,7 +282,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 3</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 3</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 3</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -298,14 +298,14 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 4</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 4</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">BudgetPC 4</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
       <li>RAM: –</li>
       <li>Speicher: –</li>
     </ul>
-    <p class="text-2xl font-bold text-green-600 mb-4">Preis folgt</p>
+    <p class="text-2xl font-bold text-green-600 mb-4">Budget folgt</p>
     <a href="configurator.html?pc=4" class="bg-purple-600 text-white px-6 py-2 rounded-lg">Konfigurieren</a>
   </div>
 
@@ -314,7 +314,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 5</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 5</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 5</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -330,7 +330,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 6</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 6</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 6</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -346,7 +346,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 7</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 7</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 7</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -362,7 +362,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 8</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 8</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Budget PC 8</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
