--- a/workstation-pcs.html
+++ b/workstation-pcs.html
@@ -238,7 +238,7 @@
   
 <!-- Hero -->
 <section class="text-center py-20 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-  <h1 class="text-4xl font-extrabold mb-4">Gaming PCs</h1>
+  <h1 class="text-4xl font-extrabold mb-4">Workstation PCs</h1>
   <p class="text-lg opacity-90">Unsere beliebtesten vorkonfigurierten Gaming-Systeme</p>
 </section>
 
@@ -249,7 +249,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 1</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 1</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 1</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -265,7 +265,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 2</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 2</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 2</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -281,7 +281,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 3</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 3</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 3</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -297,7 +297,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 4</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 4</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 4</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -313,7 +313,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 5</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 5</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 5</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -329,7 +329,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 6</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 6</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 6</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -345,7 +345,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 7</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 7</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 7</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
@@ -361,7 +361,7 @@
     <div class="w-full h-40 bg-gray-200 dark:bg-gray-700 flex items-center justify-center rounded-lg mb-4">
       <span class="text-gray-400">Bild PC 8</span>
     </div>
-    <h3 class="text-xl font-bold mb-2 text-purple-600">Gaming PC 8</h3>
+    <h3 class="text-xl font-bold mb-2 text-purple-600">Workstation PC 8</h3>
     <ul class="text-sm text-gray-600 dark:text-gray-300 mb-4 list-disc list-inside">
       <li>CPU: –</li>
       <li>GPU: –</li>
