--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
     </li>
   </ul>
 
+  <div class="hidden md:flex items-center gap-3">
+  <button id="netlify-login-desktop" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
+    Login
+  </button>
+  <button id="netlify-logout-desktop" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
+    Logout
+  </button>
+  <p id="status-desktop" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
+</div>
 
   <div class="flex items-center gap-3 md:hidden">
     <!-- Dark Mode Button (mobil) -->
