--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -15,7 +15,7 @@
 <!-- Navbar -->
 <!-- Navbar -->
 <nav class="flex items-center justify-between p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
-  
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>s
   <!-- Logo links -->
   <a href="index.html" class="flex items-center gap-2">
     <img src="Bilder/WhatsApp Bild 2025-08-19 um 11.43.56_d590e906.jpg" alt="A&T Tech Logo" class="h-10">
