--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body class="min-h-screen bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-500">
-
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <!-- Navbar -->
 <!-- Navbar -->
 <nav class="flex items-center justify-between p-6 bg-white dark:bg-gray-800 shadow-lg sticky top-0 z-50">
