--- a/builds.html
+++ b/builds.html
@@ -73,15 +73,13 @@
   </ul>
 
   <!-- Rechts: Login / Logout (nur auf PC sichtbar) -->
-<div class="hidden md:flex items-center gap-3">
-  <button id="google-login-desktop" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
-    Mit Google anmelden
+  <div class="hidden md:flex items-center gap-3">
+  <button id="netlify-login-desktop" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
+    Login
   </button>
-
-  <button id="logout-desktop" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
-    Abmelden
+  <button id="netlify-logout-desktop" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
+    Logout
   </button>
-
   <p id="status-desktop" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
 </div>
 
