--- a/budget-pcs.html
+++ b/budget-pcs.html
@@ -139,13 +139,13 @@
       </a>
     </li>
    <!-- Login nur für Mobile -->
-  <li class="mt-2 >
-     <div class="flex flex-col gap-2">
-      <button id="google-login-mobile" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
-        Mit Google anmelden
+ <li>
+    <div class="flex flex-col gap-2">
+      <button id="netlify-login-mobile" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
+        Login
       </button>
-      <button id="logout-mobile" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
-        Abmelden
+      <button id="netlify-logout-mobile" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
+        Logout
       </button>
       <p id="status-mobile" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
     </div>
