--- a/index.html
+++ b/index.html
@@ -152,14 +152,10 @@
 </ul>
 
 <script>
-  // Stelle sicher, dass das Widget geladen ist
-  if (!window.netlifyIdentity) {
-    console.warn("Netlify Identity Widget nicht geladen. Prüfe die Script-URL.");
-  } else {
-    // init (optional, aber sauber)
+if (window.netlifyIdentity) {
+  document.addEventListener("DOMContentLoaded", () => {
     netlifyIdentity.init();
 
-    // Elemente
     const btnLoginDesktop = document.getElementById("netlify-login-desktop");
     const btnLogoutDesktop = document.getElementById("netlify-logout-desktop");
     const statusDesktop = document.getElementById("status-desktop");
@@ -168,50 +164,52 @@
     const btnLogoutMobile = document.getElementById("netlify-logout-mobile");
     const statusMobile = document.getElementById("status-mobile");
 
-  function updateUI(user) {
-  const loggedIn = !!user;
+    const mobileMenu = document.getElementById("mobileMenu");
 
-  // Benutzername oder E-Mail
-  const name = user?.user_metadata?.full_name || user?.email || "User";
+    function updateUI(user) {
+      const loggedIn = !!user;
 
-  // Desktop
-  btnLoginDesktop.classList.toggle("hidden", loggedIn);
-  btnLogoutDesktop.classList.toggle("hidden", !loggedIn);
-  statusDesktop.textContent = loggedIn ? ("Hallo " + name) : "Nicht eingeloggt";
+      // Desktop
+      if (btnLoginDesktop) btnLoginDesktop.classList.toggle("hidden", loggedIn);
+      if (btnLogoutDesktop) btnLogoutDesktop.classList.toggle("hidden", !loggedIn);
+      if (statusDesktop) statusDesktop.textContent = loggedIn
+        ? "Hallo " + (user.user_metadata?.full_name || user.email)
+        : "Nicht eingeloggt";
 
-  // Mobile
-  btnLoginMobile.classList.toggle("hidden", loggedIn);
-  btnLogoutMobile.classList.toggle("hidden", !loggedIn);
-  statusMobile.textContent = loggedIn ? ("Hallo " + name) : "Nicht eingeloggt";
-}
+      // Mobile
+      if (btnLoginMobile) btnLoginMobile.classList.toggle("hidden", loggedIn);
+      if (btnLogoutMobile) btnLogoutMobile.classList.toggle("hidden", !loggedIn);
+      if (statusMobile) statusMobile.textContent = loggedIn
+        ? "Hallo " + (user.user_metadata?.full_name || user.email)
+        : "Nicht eingeloggt";
+    }
 
-    // Events
+    // Init mit aktuellem User
     netlifyIdentity.on("init", user => updateUI(user));
+
+    // Login
     netlifyIdentity.on("login", user => {
       updateUI(user);
-      netlifyIdentity.close(); // schliesst das Modal
-      // optional: schließe mobilmenü automatisch, falls offen:
-      const mobileMenu = document.getElementById("mobileMenu");
-      if (mobileMenu && !mobileMenu.classList.contains("hidden")) {
-        mobileMenu.classList.add("hidden");
-      }
+      netlifyIdentity.close();
+      if (mobileMenu) mobileMenu.classList.add("hidden"); // Menü schließen
     });
+
+    // Logout
     netlifyIdentity.on("logout", () => updateUI(null));
 
-    // Button-Handler
-    if (btnLoginDesktop) btnLoginDesktop.addEventListener("click", () => netlifyIdentity.open());
-    if (btnLoginMobile) btnLoginMobile.addEventListener("click", () => netlifyIdentity.open());
+    // Buttons
+    if (btnLoginDesktop) btnLoginDesktop.addEventListener("click", () => netlifyIdentity.open("login"));
     if (btnLogoutDesktop) btnLogoutDesktop.addEventListener("click", () => netlifyIdentity.logout());
+
+    if (btnLoginMobile) btnLoginMobile.addEventListener("click", () => netlifyIdentity.open("login"));
     if (btnLogoutMobile) btnLogoutMobile.addEventListener("click", () => netlifyIdentity.logout());
 
-    // initialer UI-Status (falls init schon gelaufen ist)
-    if (netlifyIdentity.currentUser()) {
-      updateUI(netlifyIdentity.currentUser());
-    }
-  }
-
-  
+    // Prüfen ob schon eingeloggt
+    updateUI(netlifyIdentity.currentUser());
+  });
+}
 </script>
+
 
   
   <script type="module">
