--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -11,7 +11,7 @@
 
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-900 dark:text-gray-100 transition-colors duration-300">
-
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   
 <!-- Navbar -->
 <!-- Navbar -->
